--- a/package.json
+++ b/package.json
@@ -1,22 +1,30 @@
 {
-  "name": "tix_viewer",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "axios": "^0.21.1",
-    "next": "11.0.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-paginate": "^7.1.3"
-  },
-  "devDependencies": {
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.0.1"
-  }
+    "name": "tix_viewer",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "test": "jest"
+    },
+    "dependencies": {
+
+        "next": "11.0.1",
+        "react": "17.0.2",
+        "react-dom": "17.0.2",
+        "react-paginate": "^7.1.3"
+    },
+    "devDependencies": {
+        "eslint": "7.32.0",
+        "eslint-config-next": "11.0.1",
+        "@testing-library/react": "^12.0.0",
+        "babel-jest": "^27.0.6",
+        "jest": "^27.0.6",
+        "@babel/core": "^7.14.8",
+        "@babel/preset-env": "^7.14.9",
+        "axios": "^0.21.1"
+
+    }
 }
